fix: billing service test