@@ -1,14 +1,8 @@
 package com.example.clinic.service.billing;
 
-import com.example.clinic.app.appointment.dto.AppointmentTypeDTO;
-import com.example.clinic.app.appointment.service.AppointmentService;
 import com.example.clinic.app.billing.dto.ConsultationDTO;
 import com.example.clinic.app.billing.dto.InvoiceDTO;
-import com.example.clinic.app.billing.mapper.ConsultationMapper;
-import com.example.clinic.app.billing.mapper.InvoiceMapper;
 import com.example.clinic.app.billing.service.BillingService;
-import com.example.clinic.app.doctor.service.DoctorService;
-import com.example.clinic.app.patient.service.PatientService;
 import com.example.clinic.exception.EntityNotFoundException;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,7 +10,6 @@ import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabas
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -38,50 +31,35 @@ class BillingServiceTest {
 
         InvoiceDTO invoiceDTO = billingService.generateInvoice(patientIds);
 
-        for (ConsultationDTO consultation : invoiceDTO.getConsultations()) {
-            System.out.println("Patient: " + consultation.getPatient().name());
-            System.out.println("Doctor: " + consultation.getDoctor().name());
-            System.out.println("Price: " + consultation.getPrice());
-        }
-
         assertNotNull(invoiceDTO);
         assertEquals(3, invoiceDTO.getConsultations().size());
 
-        ConsultationDTO consultation1 = invoiceDTO.getConsultations().get(0);
+        ConsultationDTO consultation1 = invoiceDTO.getConsultations().getFirst();
         assertEquals("John Doe", consultation1.getPatient().name());
-        assertEquals("Dr. House", consultation1.getDoctor().name());
-        assertEquals(new BigDecimal(250), consultation1.getPrice());
+        assertEquals("Dr. Alice Brown", consultation1.getDoctor().name());
+        assertEquals(new BigDecimal("1200.00"), consultation1.getPrice());
 
         ConsultationDTO consultation2 = invoiceDTO.getConsultations().get(1);
-        assertEquals("Sam Watson", consultation2.getPatient().name());
-        assertEquals("Dr. Emily Smith", consultation2.getDoctor().name());
-        assertEquals(new BigDecimal(180), consultation2.getPrice());
+        assertEquals("John Doe", consultation2.getPatient().name());
+        assertEquals("Dr. Carol Davis", consultation2.getDoctor().name());
+        assertEquals(new BigDecimal("2000.00"), consultation2.getPrice());
 
-        assertEquals(new BigDecimal(430), invoiceDTO.getTotalCost());
+        ConsultationDTO consultation3 = invoiceDTO.getConsultations().get(2);
+        assertEquals("Jane Smith", consultation3.getPatient().name());
+        assertEquals("Dr. Bob Lee", consultation3.getDoctor().name());
+        assertEquals(new BigDecimal("500.00"), consultation3.getPrice());
+
+        assertEquals(new BigDecimal("3700.00"), invoiceDTO.getTotalCost());
     }
-
-
-
 
     @Test
     void testGenerateInvoicePatientNotFound() {
-        List<Long> invalidPatientIds = Arrays.asList(999L);
+        List<Long> invalidPatientIds = List.of(999L);
 
         EntityNotFoundException exception = assertThrows(EntityNotFoundException.class, () -> {
             billingService.generateInvoice(invalidPatientIds);
         });
 
         assertEquals("Patients with ids 999 not found.", exception.getMessage());
-    }
-
-    private void printAppointmentTypeDetails(AppointmentTypeDTO appointmentTypeDTO) {
-        System.out.println("Appointment Type Details:");
-        System.out.println("ID: " + appointmentTypeDTO.id());
-        System.out.println("Name: " + appointmentTypeDTO.name());
-        System.out.println("Description: " + appointmentTypeDTO.description());
-        System.out.println("Duration: " + appointmentTypeDTO.duration() + " minutes");
-        System.out.println("Price: $" + appointmentTypeDTO.price());
-        System.out.println("Doctor: " + (appointmentTypeDTO.doctor() != null ? appointmentTypeDTO.doctor().name() : "No doctor assigned"));
-        System.out.println("------------------------------");
     }
 }
